@@ -24,7 +24,7 @@ under the License.
   <parent>
     <groupId>org.apache.syncope</groupId>
     <artifactId>syncope-fit</artifactId>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>2.1.1-SNAPSHOT</version>
   </parent>
 
   <name>Apache Syncope FIT Console Reference</name>
@@ -52,13 +52,14 @@ under the License.
     </dependency>
 
     <dependency>
-      <groupId>org.apache.syncope.ext.camel</groupId>
-      <artifactId>syncope-ext-camel-client-console</artifactId>
-      <version>${project.version}</version>
-    </dependency>    
-    <dependency>
       <groupId>org.apache.syncope.client</groupId>
       <artifactId>syncope-client-console</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.syncope.ext.camel</groupId>
+      <artifactId>syncope-ext-camel-client-console</artifactId>
       <version>${project.version}</version>
     </dependency>
     
@@ -156,59 +157,37 @@ under the License.
             <phase>process-resources</phase>
             <configuration>
               <target>
-                <unzip src="${settings.localRepository}/org/flowable/flowable-ui-modeler-app/${flowable.version}/flowable-ui-modeler-app-${flowable.version}.war" 
-                       dest="${flowable-modeler.directory}">
+                <unzip src="${settings.localRepository}/org/flowable/flowable-ui-modeler-app/${flowable.version}/flowable-ui-modeler-app-${flowable.version}.war" dest="${flowable-modeler.directory}">
                   <patternset>
-                    <include name="WEB-INF/classes/static/**"/>
-                    <include name="WEB-INF/lib/flowable-ui-modeler-logic-${flowable.version}.jar"/>
+                    <include name="WEB-INF/classes/static/**" />
+                    <include name="WEB-INF/lib/flowable-ui-modeler-logic-${flowable.version}.jar" />
                   </patternset>
                 </unzip>
                 
-                <unzip src="${flowable-modeler.directory}/WEB-INF/lib/flowable-ui-modeler-logic-${flowable.version}.jar"
-                       dest="${flowable-modeler.directory}">
+                <unzip src="${flowable-modeler.directory}/WEB-INF/lib/flowable-ui-modeler-logic-${flowable.version}.jar" dest="${flowable-modeler.directory}">
                   <patternset>
-                    <include name="stencilset_bpmn.json"/>
+                    <include name="stencilset_bpmn.json" />
                   </patternset>
                 </unzip>
                 
                 <move todir="${flowable-modeler.directory}">
                   <fileset dir="${flowable-modeler.directory}/WEB-INF/classes/static/">
-                    <include name="**"/>
+                    <include name="**" />
                   </fileset>
                 </move>
-                <delete dir="${flowable-modeler.directory}/WEB-INF"/>
+                <delete dir="${flowable-modeler.directory}/WEB-INF" />
                 
-                <replace file="${flowable-modeler.directory}/index.html"
-                         token="&lt;/head&gt;"
-                         value="&lt;script type=&quot;text/javascript&quot;&gt;window.onunload = refreshParent; function refreshParent() { window.opener.location.reload(); }&lt;/script&gt;&lt;/head&gt;"/>
-                <replace file="${flowable-modeler.directory}/index.html"
-                         token=" ng-click=&quot;backToLanding()&quot;"
-                         value=" disabled=&quot;disabled&quot;"/>
-                <replace file="${flowable-modeler.directory}/index.html"
-                         token="&lt;ul class=&quot;nav navbar-nav&quot; id=&quot;main-nav&quot;"
-                         value="&lt;ul class=&quot;nav navbar-nav&quot; id=&quot;main-nav&quot; style=&quot;display: none;&quot;"/>
-                <replace file="${flowable-modeler.directory}/index.html"
-                         token="&lt;div class=&quot;pull-right"
-                         value="&lt;div style=&quot;display: none;&quot; class=&quot;pull-right"/>
-                <replace file="${flowable-modeler.directory}/editor-app/editor.html"
-                         token="&lt;div class=&quot;btn-group pull-right&quot;"
-                         value="&lt;div style=&quot;display: none;&quot; class=&quot;btn-group pull-right&quot;"/>
-                <replace file="${flowable-modeler.directory}/editor-app/configuration/toolbar-default-actions.js"
-                         token="$location.path('/processes');"
-                         value="window.close();"/>
+                <replace file="${flowable-modeler.directory}/index.html" token="&lt;/head&gt;" value="&lt;script type=&quot;text/javascript&quot;&gt;window.onunload = refreshParent; function refreshParent() { window.opener.location.reload(); }&lt;/script&gt;&lt;/head&gt;" />
+                <replace file="${flowable-modeler.directory}/index.html" token=" ng-click=&quot;backToLanding()&quot;" value=" disabled=&quot;disabled&quot;" />
+                <replace file="${flowable-modeler.directory}/index.html" token="&lt;ul class=&quot;nav navbar-nav&quot; id=&quot;main-nav&quot;" value="&lt;ul class=&quot;nav navbar-nav&quot; id=&quot;main-nav&quot; style=&quot;display: none;&quot;" />
+                <replace file="${flowable-modeler.directory}/index.html" token="&lt;div class=&quot;pull-right" value="&lt;div style=&quot;display: none;&quot; class=&quot;pull-right" />
+                <replace file="${flowable-modeler.directory}/editor-app/editor.html" token="&lt;div class=&quot;btn-group pull-right&quot;" value="&lt;div style=&quot;display: none;&quot; class=&quot;btn-group pull-right&quot;" />
+                <replace file="${flowable-modeler.directory}/editor-app/configuration/toolbar-default-actions.js" token="$location.path('/processes');" value="window.close();" />
  
-                <copy file="${basedir}/src/main/resources/app-cfg.js" 
-                      todir="${flowable-modeler.directory}/scripts"
-                      overwrite="true"/>
-                <copy file="${basedir}/src/main/resources/url-config.js" 
-                      todir="${flowable-modeler.directory}/editor-app/configuration"
-                      overwrite="true"/>
-                <copy file="${basedir}/src/main/resources/toolbar.js" 
-                      todir="${flowable-modeler.directory}/editor-app/configuration"
-                      overwrite="true"/>
-                <copy file="${basedir}/src/main/resources/save-model.html" 
-                      todir="${flowable-modeler.directory}/editor-app/popups"
-                      overwrite="true"/>
+                <copy file="${basedir}/src/main/resources/app-cfg.js" todir="${flowable-modeler.directory}/scripts" overwrite="true" />
+                <copy file="${basedir}/src/main/resources/url-config.js" todir="${flowable-modeler.directory}/editor-app/configuration" overwrite="true" />
+                <copy file="${basedir}/src/main/resources/toolbar.js" todir="${flowable-modeler.directory}/editor-app/configuration" overwrite="true" />
+                <copy file="${basedir}/src/main/resources/save-model.html" todir="${flowable-modeler.directory}/editor-app/popups" overwrite="true" />
               </target>
             </configuration>
             <goals>
@@ -238,7 +217,7 @@ under the License.
               <cargo.tomcat.ajp.port>${cargo.tomcat.ajp.port}</cargo.tomcat.ajp.port>
               <cargo.rmi.port>${cargo.rmi.port}</cargo.rmi.port>
 
-              <cargo.jvmargs>-XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -XX:MaxPermSize=512m -Xmx1024m -Xms512m</cargo.jvmargs>
+              <cargo.jvmargs>-XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -Xmx1024m -Xms512m</cargo.jvmargs>
             </properties>
             <configfiles>
               <configfile>
@@ -375,7 +354,7 @@ under the License.
                 <properties>
                   <cargo.jvmargs>-Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n
                     -Dwicket.configuration=development
-                    -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -XX:MaxPermSize=512m -Xmx1024m -Xms512m</cargo.jvmargs>
+                    -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -Xmx1024m -Xms512m</cargo.jvmargs>
                 </properties>
               </configuration>
             </configuration>
@@ -395,8 +374,16 @@ under the License.
     </profile>
     
     <profile>
-      <id>jrebel</id>
+      <id>hotswap</id>
       
+      <dependencies>
+        <dependency>
+          <groupId>org.hotswapagent</groupId>
+          <artifactId>hotswap-agent</artifactId>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+
       <build>
         <defaultGoal>clean verify cargo:run</defaultGoal>
 
@@ -407,11 +394,13 @@ under the License.
             <inherited>true</inherited>
             <executions>
               <execution>
-                <id>enableJRebelForCore</id>
+                <id>enableHotSwapForCore</id>
                 <phase>package</phase>
                 <configuration>
                   <target>                                               
-                    <copy file="${basedir}/../core-reference/target/test-classes/rebel.xml" tofile="${basedir}/../core-reference/target/syncope-fit-core-reference-${project.version}/WEB-INF/classes/rebel.xml" overwrite="true"/>
+                    <copy file="${basedir}/../core-reference/target/test-classes/hotswap-agent.properties"
+                          tofile="${basedir}/../core-reference/target/syncope-fit-core-reference-${project.version}/WEB-INF/classes/hotswap-agent.properties"
+                          overwrite="true"/>
                   </target>
                 </configuration>
                 <goals>
@@ -428,10 +417,11 @@ under the License.
             <configuration>
               <configuration>
                 <properties>
-                  <cargo.jvmargs>-Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n
-                    -noverify -agentpath:${env.REBEL_HOME}/lib/libjrebel64.so -Drebel.spring_plugin=true
+                  <cargo.jvmargs>
                     -Dwicket.configuration=development
-                    -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -XX:MaxPermSize=512m -Xmx1024m -Xms512m</cargo.jvmargs>
+                    -XXaltjvm=dcevm -javaagent:${settings.localRepository}/org/hotswapagent/hotswap-agent/${hotswap.version}/hotswap-agent-${hotswap.version}.jar=autoHotswap=true,disablePlugin=Spring
+                    -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8000
+                    -Xmx1024m -Xms512m</cargo.jvmargs>
                 </properties>
               </configuration>
             </configuration>
@@ -453,7 +443,7 @@ under the License.
             <directory>src/test/resources</directory>
             <filtering>true</filtering>
             <includes>
-              <include>rebel.xml</include>
+              <include>hotswap-agent.properties</include>
             </includes>
           </resource>
         </resources>
